Fix and update styling in reference re-use dialog
This makes the dialog's behavior much more robust, especially when
confronted with overly long and complex references.
* Limit the height of list items to avoid the situation where a
  single item overflows the dialog. This makes it especially hard
  to navigate with the cursor keys. We can't see any more what's
  going on. The proposed height is intentionally a very high upper
  bound, equivalent to about 2/3 of the dialog's height.
* Limit the name on the right side to take up less than half of an
  item. The left side is for the content. Usually the names are very
  short anyway. But if a name is long it currently creates a mess
  where the name is intertwined with the content.
* Break overly long words in references.
* Changing the opacity to use upstream values makes the dimmed names
  a bit darker. I think this is good, even necessary for legibility.

Technical changes:
* Use LESS variables from upstream, where possible.
* Remove redundant `relative` already set upstream.

Bug: T372385

--- a/modules/ve-cite/ve.ui.MWReferenceResultWidget.less
+++ b/modules/ve-cite/ve.ui.MWReferenceResultWidget.less
@@ -8,8 +8,10 @@
 @import 'mediawiki.skin.variables.less';
 
 .ve-ui-mwReferenceResultWidget {
-	position: relative;
 	padding: 1em;
+	// Limit extremely large references to not overflow the dialog
+	max-height: 12em;
+	overflow: hidden;
 	border-bottom: @border-width-base @border-style-base @border-color-muted;
 
 	&:last-child {
@@ -24,7 +26,8 @@
 
 	&.oo-ui-labelElement .oo-ui-labelElement-label {
 		white-space: normal;
-		// Disable click events in the preview
+		// Ignore clicks on e.g. <a> elements that are part of the reference's text
 		pointer-events: none;
+		word-wrap: break-word;
 	}
 }
